--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -4,6 +4,8 @@
     <h1>My Cart</h1>
   </header>
 
+  <% if cart != {} %>
+
   <div class="panel panel-default items">
     <table class="table table-bordered">
       <thead>
@@ -49,5 +51,12 @@
       <% end %>
     </div>
   </div>
+
+  <% else %>
+  <div class="order-summary jumbotron">
+      Your cart is empty! Try adding an item to it on the home page.
+    </div>
+    <%= link_to 'Home', :root %>
+  <% end %>
 
 </section>
