Added reviews and required user to be present for several user-functions

--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -35,6 +35,8 @@
     </table>
   </div>
 
+  <% puts current_user %>
+
   <div class="row">
     <div class="col-xs-12">
       <%= form_tag orders_path do %>
