--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -24,8 +24,67 @@
           <dd><%= @product.price %></dd>
         </dl>
       </div>
+
     </div>
 
+  </article>
+
+  <% if current_user %>
+  <div>
+    <%= form_for [@product, @review] do |form| %>
+
+      <% if form.object.errors.any? %>
+        <div class="alert alert-danger">
+          <strong>The following errors prevented saving:</strong>
+          <ul>
+            <% form.object.errors.full_messages.each do |error| %>
+              <li><%= error %></li>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
+
+      <div class="form-group">
+        <%= form.label :rating %>
+        <%= form.number_field :rating, min: 0, max: 5, class: 'form-control' %>
+      </div>
+
+      <div class="form-group">
+        <%= form.label :description %>
+        <%= form.text_area :description, class: 'form-control' %>
+      </div>
+
+      <%= form.submit 'Submit Review', class: 'btn btn-primary' %>
+    <% end %>
+  </div>
+  <% end %>
+
+  <article class="reviews-box">
+    <h2 class="reviews-header"> Reviews </h2>
+    <div class="row reviews">
+      <% @product.reviews.reverse_each do |detail| %>
+        <div class="col-sm-8">
+          <dl class="dl-horizontal">
+            <dt>User</dt>
+            <dd><%= detail.user.first_name %> <%= detail.user.last_name %></dd>
+            <dt>Rating</dt>
+            <dd><%= detail.rating %> / 5</dd>
+            <dt>Description</dt>
+            <dd><%= detail.description %></dd>
+            <% if current_user == detail.user %>
+            <dt>Delete Review</dt>
+
+            <% puts"========================================" %>
+            <% puts detail.id %>
+            <% puts"========================================" %>
+            <dd><%= link_to fa_icon('trash'), product_review_url(@product.id, detail.id), class: 'btn btn-sm btn-danger', method: :delete, data: { confirm: "Are you sure?" } %></dd>
+            <% end %>
+          </dl>
+
+        </div>
+
+      <% end %>
+    </div>
   </article>
 
 </section>
