Modified review/review-form css, added overall ratings to products, restricted non-users from cart functions, modified product deletion to cascade to reviews table

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -76,6 +76,13 @@ main section.categories-show {
   }
 }
 
+#rating {
+  margin-left: 10px;
+  font-weight: bold;
+  background-color: gold;
+  pointer-events: none;
+}
+
 main section.products-show {
 
   .product-detail {
