--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -54,9 +54,9 @@
 
   <% else %>
   <div class="order-summary jumbotron">
-      Your cart is empty! Try adding an item to it on the home page.
+      Your cart is empty. Try adding an item to it on the home page!
     </div>
     <%= link_to 'Home', :root %>
   <% end %>
-
+<div class="page-bottom"></div>
 </section>
