--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -9,9 +9,17 @@
     <%= product.description %>
   </p>
   <footer class="actions">
-    <%= link_to add_item_cart_path(product_id: product.id), class: 'btn btn-primary', method: :put do %>
-      <%= fa_icon "shopping-cart", text: 'Add' %>
+
+    <% if current_user && product.quantity != 0 %>
+      <%= link_to add_item_cart_path(product_id: product.id), class: 'btn btn-primary', method: :put do %>
+        <%= fa_icon "shopping-cart", text: 'Add' %>
+      <% end %>
     <% end %>
+
+    <span class="btn btn-default" id="rating">
+      <%= product.reviews.sum(:rating)/5 %> / 5
+    </span>
+
     <%= link_to product, class: 'btn btn-default pull-right' do %>
       Details &raquo;
     <% end %>
