--- a/app/assets/stylesheets/reviews.scss
+++ b/app/assets/stylesheets/reviews.scss
@@ -15,3 +15,15 @@
 .reviews-box {
   margin-top: 70px;
 }
+
+.review-rating {
+  width: 60px;
+}
+
+.review-description {
+  width: 300px;
+}
+
+.spacer {
+  margin-top: 100px;
+}
