--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -34,7 +34,7 @@
           <%= form.password_field :password_confirmation, class: 'form-control' %>
         </div>
 
-        <%= form.submit 'Register', class: 'btn btn-primary' %>
+        <%= form.submit 'Register', class: 'page-bottom btn btn-primary' %>
       <% end %>
     </div>
   </div>
